--- a/HazemBadr.html
+++ b/HazemBadr.html
@@ -171,8 +171,8 @@
   <button class="mode-toggle" id="modeToggle">🌙 Dark Mode</button>
 
   <div class="card" id="profileCard">
-    <img src="logo.jpg" alt="Telemedia Misr" class="logo" />
-    <img src="Hazem.jpg" alt="Hazem Badr" class="profile-img" />
+   <img src="./logo.jpg" alt="Telemedia Logo" class="logo">
+    <img src="./hazem.jpg" alt="Hazem Badr" class="profile-img">
     <h3>Contact Information</h3>
 
     <div class="info text-start">
@@ -214,3 +214,4 @@
   </script>
 </body>
 </html>
+
