--- a/HazemBadr.html
+++ b/HazemBadr.html
@@ -1,217 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hazem Badr - IT Specialist | Telemedia Misr</title>
-
-  <!-- Bootstrap -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-
-  <!-- Google Font -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-    rel="stylesheet"
-  />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hazem Badr | Telemedia</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    * {
-      transition: all 0.3s ease;
-    }
-
     body {
-      font-family: "Poppins", sans-serif;
       height: 100vh;
-      margin: 0;
-      overflow: hidden;
       display: flex;
-      align-items: center;
       justify-content: center;
-      background: radial-gradient(circle at center, #e3f2fd, #90caf9);
-      color: #222;
-    }
-
-    body.dark {
-      background: radial-gradient(circle at center, #0d1b2a, #1b263b);
-      color: #f8f9fa;
-    }
-
-    .background {
-      position: absolute;
-      width: 120%;
-      height: 120%;
-      top: -10%;
-      left: -10%;
-      background: radial-gradient(circle at 50% 50%, rgba(13, 110, 253, 0.2), transparent 70%);
-      z-index: 0;
-      transition: background-position 0.2s ease;
+      align-items: center;
+      background: radial-gradient(circle at center, #d8eaff, #6fa3ef);
+      overflow: hidden;
+      transition: background 0.5s ease;
     }
 
     .card {
+      width: 380px;
+      text-align: center;
+      padding: 25px;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      background: white;
+      transition: background 0.5s, color 0.5s;
       position: relative;
       z-index: 2;
-      width: 380px;
-      border: none;
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-      background-color: #fff;
-      text-align: center;
-      padding: 30px 25px;
-      opacity: 0;
-      transform: translateY(50px);
-      transition: all 1s ease;
     }
 
-    body.dark .card {
-      background-color: #243447;
-      box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
-    }
-
-    .card.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .logo {
-      width: 90px;
-      margin-bottom: 15px;
+    .card img.logo {
+      width: 100px;
+      margin-bottom: 10px;
     }
 
     .profile-img {
-      width: 140px;
-      height: 140px;
-      object-fit: cover;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
-      border: 4px solid #0d6efd;
-      margin: 0 auto 20px;
-      display: block;
-      transition: all 0.3s ease;
+      object-fit: cover;
+      margin: 10px 0;
+      border: 4px solid #007bff;
     }
 
-    .card:hover .profile-img {
-      transform: scale(1.05);
-    }
-
-    h3 {
-      font-weight: 600;
-      color: #0d6efd;
-      margin-bottom: 15px;
-    }
-
-    body.dark h3 {
-      color: #74c0fc;
-    }
-
-    .info {
-      text-align: left;
-      margin-top: 10px;
-      margin-left: 20px;
-      font-size: 15px;
-    }
-
-    .info p {
-      margin: 6px 0;
-    }
-
-    .info span {
-      color: #0d6efd;
-      font-weight: 500;
-    }
-
-    body.dark .info span {
-      color: #74c0fc;
+    .info h3 {
+      color: #007bff;
+      margin-bottom: 10px;
     }
 
     a {
-      color: #0d6efd;
+      color: #007bff;
       text-decoration: none;
-      font-weight: 500;
+      transition: color 0.3s;
     }
 
     a:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      margin-top: 15px;
-      color: #6c757d;
-      font-size: 13px;
-    }
-
-    body.dark footer {
-      color: #adb5bd;
+      color: #0056b3;
     }
 
     .mode-toggle {
       position: absolute;
-      top: 20px;
-      right: 30px;
-      z-index: 5;
-      background-color: #0d6efd;
-      color: white;
+      top: 15px;
+      right: 15px;
+      background: none;
       border: none;
-      border-radius: 20px;
-      padding: 8px 16px;
       cursor: pointer;
-      font-size: 14px;
-      transition: 0.3s;
+      font-size: 1.5rem;
     }
 
-    .mode-toggle:hover {
-      background-color: #084298;
+    /* Dark Mode */
+    body.dark {
+      background: radial-gradient(circle at center, #222, #000);
+    }
+
+    body.dark .card {
+      background: #1c1c1c;
+      color: #eaeaea;
+    }
+
+    body.dark a {
+      color: #57a6ff;
+    }
+
+    /* Floating background circles */
+    .circle {
+      position: absolute;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.2);
+      animation: float 8s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
     }
   </style>
 </head>
 <body>
-  <div class="background" id="background"></div>
+  <!-- Background floating circles -->
+  <div class="circle" style="width:100px;height:100px;left:10%;top:20%;"></div>
+  <div class="circle" style="width:150px;height:150px;right:15%;top:60%;"></div>
+  <div class="circle" style="width:80px;height:80px;right:40%;top:10%;"></div>
 
-  <button class="mode-toggle" id="modeToggle">🌙 Dark Mode</button>
+  <button class="mode-toggle" id="modeToggle">🌙</button>
 
   <div class="card" id="profileCard">
-   <img src="./logo.jpg" alt="Telemedia Logo" class="logo">
-    <img src="./hazem.jpg" alt="Hazem Badr" class="profile-img">
-    <h3>Contact Information</h3>
-
-    <div class="info text-start">
-      <p>👤 <span>Name:</span> Hazem Badr</p>
-      <p>📞 <span>Phone:</span> <a href="tel:+201090263857">01090263857</a></p>
-      <p>✉️ <span>Email:</span> <a href="mailto:Hazmbadr148@gmail.com">Hazmbadr148@gmail.com</a></p>
-      <p>🏢 <span>Company:</span> Telemedia Misr</p>
-      <p>💼 <span>Title:</span> IT Specialist</p>
-      <p>🔗 <span>LinkedIn:</span>
-        <a href="https://www.linkedin.com/in/hazim-badr-el-saadany-45703320a" target="_blank">Profile</a>
-      </p>
-    </div>
-
-    <footer>Telemedia Misr © 2025</footer>
+    <img src="./logo.jpg" alt="Telemedia Logo" class="logo">
+    <img src="./Hazem.jpg" alt="Hazem Badr" class="profile-img">
+    
+    <h3>👤 Name: Hazem Badr</h3>
+    <p>💼 Title: IT Specialist</p>
+    <p>🏢 Company: Telemediamisr</p>
+    <p>📞 Phone: <a href="tel:01090263857">01090263857</a></p>
+    <p>✉️ Email: <a href="mailto:Hazem.Badr@telemediamisr.com">Hazem.Badr@telemediamisr.com</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/hazim-badr-el-saadany-45703320a" target="_blank">View Profile</a></p>
   </div>
 
   <script>
-    // Fade-in effect
-    window.addEventListener("load", () => {
-      document.getElementById("profileCard").classList.add("show");
-    });
-
-    // Mouse movement background animation
-    const background = document.getElementById("background");
-    document.addEventListener("mousemove", (e) => {
-      const x = (e.clientX / window.innerWidth) * 100;
-      const y = (e.clientY / window.innerHeight) * 100;
-      background.style.backgroundPosition = `${x}% ${y}%`;
-    });
-
-    // Dark / Light mode toggle
     const modeToggle = document.getElementById("modeToggle");
+    const body = document.body;
+
     modeToggle.addEventListener("click", () => {
-      document.body.classList.toggle("dark");
-      modeToggle.textContent = document.body.classList.contains("dark")
-        ? "☀️ Light Mode"
-        : "🌙 Dark Mode";
+      body.classList.toggle("dark");
+      modeToggle.textContent = body.classList.contains("dark") ? "☀️" : "🌙";
+    });
+
+    // Mouse parallax effect
+    document.addEventListener("mousemove", (e) => {
+      const x = e.clientX / window.innerWidth - 0.5;
+      const y = e.clientY / window.innerHeight - 0.5;
+      document.querySelectorAll(".circle").forEach((circle, i) => {
+        const speed = (i + 1) * 10;
+        circle.style.transform = `translate(${x * speed}px, ${y * speed}px)`;
+      });
     });
   </script>
 </body>
 </html>
-
