--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
   <button class="mode-toggle" id="modeToggle">🌙</button>
 
   <div class="card" id="profileCard">
-    <img src="./logo.jpg" alt="Telemedia Logo" class="logo">
-    <img src="./Hazem.jpg" alt="Hazem Badr" class="profile-img">
+   <img src="Hazem.jpg" alt="Hazem">
+<img src="logo.jpg" alt="logo">
     
     <h3>👤 Name: Hazem Badr</h3>
     <p>💼 Title: IT Specialist</p>
@@ -136,3 +136,4 @@
   </script>
 </body>
 </html>
+
