--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <button class="mode-toggle" id="modeToggle">🌙</button>
 
   <div class="card" id="profileCard">
-   <img src="Hazem.jpg" alt="Hazem">
+   <img src="hazem.jpg" alt="Hazem">
 <img src="logo.jpg" alt="logo">
     
     <h3>👤 Name: Hazem Badr</h3>
@@ -136,4 +136,5 @@
   </script>
 </body>
 </html>
+
 
