--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
     <p>📞 Phone: <a href="tel:01090263857">01090263857</a></p>
     <p>✉️ Email: <a href="mailto:Hazem.Badr@telemediamisr.com">Hazem.Badr@telemediamisr.com</a></p>
     <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/hazim-badr-el-saadany-45703320a" target="_blank">View Profile</a></p>
+    <a href="hazem.vcf" download class="btn btn-success w-100 mt-2">
+    📇 Save Contact
+</a>
+
   </div>
 
   <script>
@@ -136,5 +140,6 @@
   </script>
 </body>
 </html>
+
 
 
