--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
       z-index: 2;
     }
 
+    /* Logo */
     .card img.logo {
-      width: 100px;
-      margin-bottom: 10px;
+      width: 80px;
+      margin-bottom: 15px;
     }
 
+    /* Profile Image */
     .profile-img {
-      width: 120px;
-      height: 120px;
+      width: 130px;
+      height: 130px;
       border-radius: 50%;
       object-fit: cover;
-      margin: 10px 0;
+      margin-bottom: 15px;
       border: 4px solid #007bff;
     }
 
@@ -104,19 +106,22 @@
   <button class="mode-toggle" id="modeToggle">🌙</button>
 
   <div class="card" id="profileCard">
-   <img src="hazem.jpg" alt="Hazem">
-<img src="logo.jpg" alt="logo">
-    
-    <h3>👤 Name: Hazem Badr</h3>
-    <p>💼 Title: IT Specialist</p>
-    <p>🏢 Company: Telemediamisr</p>
-    <p>📞 Phone: <a href="tel:01090263857">01090263857</a></p>
-    <p>✉️ Email: <a href="mailto:Hazem.Badr@telemediamisr.com">Hazem.Badr@telemediamisr.com</a></p>
-    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/hazim-badr-el-saadany-45703320a" target="_blank">View Profile</a></p>
-    <a href="hazem.vcf" download class="btn btn-success w-100 mt-2">
-    📇 Save Contact
-</a>
+    <!-- Logo -->
+    <img src="logo.jpg" alt="Telemedia Logo" class="logo">
 
+    <!-- Profile Image -->
+    <img src="hazem.jpg" alt="Hazem" class="profile-img">
+
+    <div class="info">
+      <h3>👤 Name: Hazem Badr</h3>
+      <p>💼 Title: IT Specialist</p>
+      <p>🏢 Company: Telemediamisr</p>
+      <p>📞 Phone: <a href="tel:01090263857">01090263857</a></p>
+      <p>✉️ Email: <a href="mailto:Hazem.Badr@telemediamisr.com">Hazem.Badr@telemediamisr.com</a></p>
+      <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/hazim-badr-el-saadany-45703320a" target="_blank">View Profile</a></p>
+    </div>
+
+    <a href="hazem.vcf" download class="btn btn-success w-100 mt-3">📇 Save Contact</a>
   </div>
 
   <script>
@@ -140,6 +145,3 @@
   </script>
 </body>
 </html>
-
-
-
