Removed personal photo and made logo clickable

--- a/index.html
+++ b/index.html
@@ -107,10 +107,13 @@
 
   <div class="card" id="profileCard">
     <!-- Logo -->
-    <img src="logo.jpg" alt="Telemedia Logo" class="logo">
+   <a href="https://www.telemediamisr.com/" target="_blank">
+  <img src="logo.png" alt="Telemedia Logo" class="logo">
+</a>
 
     <!-- Profile Image -->
-    <img src="hazem.jpg" alt="Hazem" class="profile-img">
+  <!-- <img src="my-photo.png" alt="Hazem Badr" class="profile-photo"> -->
+
 
     <div class="info">
       <h3>👤 Name: Hazem Badr</h3>
@@ -145,3 +148,4 @@
   </script>
 </body>
 </html>
+
