--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -108,7 +109,7 @@
   <div class="card" id="profileCard">
     <!-- Logo -->
    <a href="https://www.telemediamisr.com/" target="_blank">
-  <img src="logo.png" alt="Telemedia Logo" class="logo">
+  <img src="logo.jpg" alt="Telemedia Logo" class="logo">
 </a>
 
     <!-- Profile Image -->
@@ -148,4 +149,5 @@
   </script>
 </body>
 </html>
+
 
