--- a/Kareem.html
+++ b/Kareem.html
@@ -112,12 +112,12 @@
 </a>
 
     <!-- Profile Image -->
-  <!-- <img src="my-photo.png" alt="Hazem Badr" class="profile-photo"> -->
+ <img src="kareem.jpg" alt="Kareem Abdullah" class="profile-photo"> 
 
 
     <div class="info">
       <h3>👤 Name:Kareem Abdullah </h3>
-      <p>💼 Title: IT Manager</p>
+      <p>💼 Title:Information Technology Manger</p>
       <p>🏢 Company: Telemediamisr</p>
       <p>📞 Phone: <a href="tel:01000021832">01000021832</a></p>
       <p>✉️ Email: <a href="mailto:Kareem.Mohsen@telemediamisr.com">Kareem.Mohsen@telemediamisr.com</a></p>
@@ -148,4 +148,5 @@
   </script>
 </body>
 </html>
+
 
