--- a/ayman.html
+++ b/ayman.html
@@ -124,7 +124,7 @@
     <div class="info">
       <h3>👤 Name: Ayman El-Ghazaly</h3>
       <p>💼 Title: Health Tourism Director</p>
-      <p>🏢 Company: Telemediamisr</p>
+      <p>🏢 Company: HoloolMed</p>
       <p>📞 Phone: <a href="tel:01555550551">01555550551</a></p>
       <p>✉️ Email: <a href="mailto:Ayman.Elghazaly@HoloolMed.com">Ayman.Elghazaly@HoloolMed.com</a></p>
       <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/Ayman.Elghazaly-359a0566" target="_blank">View Profile</a></p>
@@ -153,4 +153,5 @@
     });
   </script>
 </body>
+
 </html>
