--- a/ayman.html
+++ b/ayman.html
@@ -127,7 +127,7 @@
       <p>🏢 Company: HoloolMed</p>
       <p>📞 Phone: <a href="tel:01555550551">01555550551</a></p>
       <p>✉️ Email: <a href="mailto:Ayman.Elghazaly@HoloolMed.com">Ayman.Elghazaly@HoloolMed.com</a></p>
-      <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/Ayman.Elghazaly-359a0566" target="_blank">View Profile</a></p>
+      <!--<p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/Ayman.Elghazaly-359a0566" target="_blank">View Profile</a></p>-->
     </div>
 
     <a href="ayman.vcf" download class="btn btn-success w-100 mt-3">📇 Save Contact</a>
@@ -155,3 +155,4 @@
 </body>
 
 </html>
+
