--- a/Kareem.html
+++ b/Kareem.html
@@ -122,7 +122,7 @@
     <img src="kareem.jpg" alt="Kareem Abdullah" class="profile-photo">
 
     <div class="info">
-      <h3>👤 Name: Kareem Abdullah</h3>
+      <h3>👤 Name: Kareem Mohsen</h3>
       <p>💼 Title: Information Technology Manager</p>
       <p>🏢 Company: Telemediamisr</p>
       <p>📞 Phone: <a href="tel:01000021832">01000021832</a></p>
@@ -154,3 +154,4 @@
   </script>
 </body>
 </html>
+
